# Louis

./: .gitignore  CMakeLists.txt  REFERENCES.md  cmake.sh  prebuild.sh  run.sh  test.sh
src/: main.cpp  prebuild.cpp  test.cpp
src/lib/: rozfetch.hpp  sll.hpp
src/lib/napi/: napi.cpp  napi.hpp  napi_prereq.cpp  napi_prereq.hpp
src/lib/peoplesoft/: peoplesoft.hpp
src/lib/rui/: distance.hpp  solver.cpp  solver.hpp
src/lib/utils/: cache.cpp  cache.hpp  fs.cpp  fs.hpp  str.hpp
tools/jsonstruct/: jsonstruct.js
